cm-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: my-db
  name: my-db
spec:
  containers:
  - image: nginx
    name: my-db
    volumeMounts:
    - name: hosts
      mountPath: /mnt/etc/
      readOnly: True
  volumes:
  - name: hosts
    configMap:
      name: hosts
