pod-a.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod-a
  name: pod-a
spec:
  containers:
  - image: nginx
    name: pod-a
