pvc-web.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: web-date-pvc
  name: web-date-pvc
spec:
  containers:
  - image: nginx
    name: webserver
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
      readOnly: true
  - image: alpine
    name: content
    command: ["/bin/sh", "-c"]
    args:
    - while true; do
        date >> /html/index.html;
        sleep 5;
      done
    volumeMounts:
    - name: html
      mountPath: /html
  volumes:
  - name: html
    persistentVolumeClaim:
      claimName: pvc-standard
