secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: my-db
  name: my-db
spec:
  containers:
  - image: nginx
    name: my-db
    volumeMounts:
    - name: secret-file
      mountPath: /mnt/etc/
      readOnly: True
  volumes:
  - name: secret-file
    secret:
      secretName: secret-from-file
