svc_node_port.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: webserver
  name: webserver
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 32001
  selector:
    run: webserver
  type: NodePort
