ingress (1).yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-deploy-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver-svc
            port:
              number: 80
